...
        app:layout_constraintEnd_toEndOf="@+id/CoinsTable"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/CoinsTable"
        app:srcCompat="@drawable/ic_exchange_crypto" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/giftCryptoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/exchangeCryptoBtn"
...
